--- a/wiki/GreenMainPage.wiki
+++ b/wiki/GreenMainPage.wiki
@@ -1,4 +1,5 @@
 #summary Starting page for the Green documentation.
+#labels Featured
 
 The Green solver provides a universal interface to a range of SAT/SMT decision procedures, constraint solvers, model counters, and related tools. Queries are reduced, reused, and recycled by built-in routines that provide simplification and persistence.
 
