--- a/wiki/GreenConfiguration.wiki
+++ b/wiki/GreenConfiguration.wiki
@@ -13,17 +13,30 @@ green.taskmanager = <classname>
 Green can be configure with any number of services.  An initial setting determines the initial list of services:
 
 {{{
-green.services = service1, service2, service3 ...
+green.services = <service1>, <service2>, <service3> ...
 }}}
 
-If a service `serv' has been configured, and an instance `inst' has been created, users can invoke the service by calling
+If a service `serv` has been configured, and an instance `inst` has been created, users can invoke the service by calling
 
 {{{
 Object r = inst.request("serv");
 }}}
 
-The `request' method returns an `java.lang.Object', the exact nature of which depends on the service.  For example, for a satisfiability service, a typical invocation might be
+The `request` method returns an `java.lang.Object`, the exact nature of which depends on the service.  For example, for a satisfiability service, a typical invocation might be
 
 {{{
 Boolean issat = (Boolean) inst.request("sat");
+}}}
+
+The nature of the object depends entirely on the services configured.  The nature of a service is described as follows:
+
+{{{
+green.service.<service> = <service-tree>
+}}}
+
+The syntax of the service tree is as follows:
+
+{{{
+<service-tree> ::= <child1> <child2> <child3> ...
+<child> ::= <service-name> | "(" <service-name> <service-tree> ")"
 }}}
