--- a/wiki/GreenDocumentation.wiki
+++ b/wiki/GreenDocumentation.wiki
@@ -3,7 +3,7 @@
 
 The Green solver provides a universal interface to a range of SAT/SMT decision procedures, constraint solvers, model counters, and related tools. Queries are reduced, reused, and recycled by built-in routines that provide simplification and persistence.
 
-  * Tutorials
+  * VideoTutorials
   * UserGuide
   * DeveloperGuide
   * RelatedPublications
